--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     document.write(`<img src="split_y${y}_x${x}.jpg" alt="Image y${y} x${x}">`);
                 }
             }
+            document.write(`<img src="target.jpg" alt="Image 00">`);
         </script>
     </div>
 </body>
